# rl_avoidance_gazebo

./: CMakeLists.txt  README.md  package.xml
GAZEBO_TEST/: test_run.py  test_world.py  test_world_LAH.py
GAZEBO_TEST_+R/: multi_test_world_LAH.py  test_amcl_world.py  test_amcl_world_LAH.py  test_run_r.py  test_world.py  test_world_LAH.py  test_world_wp.py
GAZEBO_TEST_+R/model/: ppo_r.py
GAZEBO_TEST_SAC/: A_gazebo_test_sac.py
GAZEBO_TEST_SAC/TEST_NET/: A_gazebo_test_sac.py  A_syscon_gazebo_test_amcl_world.py  gazebo_test_sac.py  gazebo_test_sac_2.py  test.py
GAZEBO_TRAIN_SAC/gazebo/syscon_multi_agent/: syscon_gazebo_train_amcl_world.py  train_gazebo_sac.py
goal_pub/: goal_pub.py  goal_pub_config.py
launch/Simulation/: multi-servingbot_rl.launch  multi-servingbot_rl_ lookahead.launch  multi-servingbot_rl_lookahead.launch  servingbot_rl.launch  servingbot_rl_lookahead.launch  test_servingbot_rl.launch
launch/Simulation/params/: lookahead.yaml  rviz_rl_navigation.rviz  rviz_single_rl_navigation.rviz
launch/Simulation/params/carlike/: 2global_costmap_params.yaml  dwa_local_planner_params.yaml
src/: lookahead_point.cpp  lookahead_point3.cpp
urdf/: servingbot_rl.urdf.xacro
